--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /AsposeAssignment.Runner/obj
 /AsposeAssignment.Tests/bin/Debug/net5.0
 /AsposeAssignment.Tests/obj
+/AsposeAssignment.Tests/bin/Release/net5.0
